--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -2,10 +2,21 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="La chouette agence - Contacts">
+		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet - Contacts">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="theme-color" content="#000">
 		<meta name="robots" content="index, follow">
+		<meta property="og:url" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="La Chouette Agence - Web Design à Lyon" />
+		<meta property="og:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta property="og:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
+		<meta name="twitter:card" content="website" />
+		<meta name="twitter:site" content="@lachouetteagence" />
+		<meta name="twitter:creator" content="@lachouetteagence" />
+		<meta name="twitter:title" content="La Chouette Agence - Web Design à Lyon" />
+		<meta name="twitter:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta name="twitter:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<link rel="manifest" href="../manifest.webmanifest.json">
 		<link rel="canonical" href="../index.html">
 		<link rel="apple-touch-icon" href="../assets/img/favicon.jpg">
@@ -151,6 +162,41 @@
 			<!-- Footer - Links END -->
 		</main>
 		<!-- Principal container END -->
+		<!-- Balisage JSON-LD généré par l'outil d'aide au balisage de données structurées de Google -->
+		<script type="application/ld+json">
+			{
+				"@context" : "http://schema.org",
+				"@type" : "LocalBusiness",
+				"name" : "La chouette agence.",
+				"image" : "https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png",
+				"email" : "contact@lachouetteagence.com",
+				"address" : {
+					"@type" : "PostalAddress",
+					"streetAddress" : "2 place Sathonay",
+					"addressLocality" : "Lyon",
+					"addressRegion" : "Rhône-Alpes",
+					"addressCountry" : "France",
+					"postalCode" : "69001"
+				},
+				"openingHoursSpecification" : {
+					"@type" : "OpeningHoursSpecification",
+					"dayOfWeek" : {
+						"@type" : "DayOfWeek",
+						"name" : "Lundi au Vendredi"
+					},
+					"opens" : "09:00",
+					"closes" : "18:00"
+				},
+				"review" : {
+					"@type" : "Review",
+					"author" : {
+						"@type" : "Person",
+						"name" : "Maxime Guibard, PDG de À vos fourchettes"
+					},
+					"reviewBody" : "&quot;La chouette agence est une excellente agence ! Les<BR/>\n\t\t\t\t\t\tweb designers ont réussi à capturer l&#39;essence de notre<BR/>\n\t\t\t\t\t\tentreprise et à l&#39;intégrer à notre site. Cela nous a aidé à<BR/>\n\t\t\t\t\t\tdoubler nos ventes en ligne à Lyon.&quot;"
+				}
+			}
+		</script>
 		<!-- Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164136332-1"></script>
 		<script>
