--- a/html-pages/accessibility.html
+++ b/html-pages/accessibility.html
@@ -137,5 +137,49 @@
                 <h3>Aide à la Navigation</h3>
                 <p>Tous les liens présents sur ce site sont accessibles à la navigation clavier (Tabulation)</p>
         </main>
+        <!-- Balisage JSON-LD généré par l'outil d'aide au balisage de données structurées de Google -->
+        <script type="application/ld+json">
+            {
+                "@context" : "http://schema.org",
+                "@type" : "LocalBusiness",
+                "name" : "La chouette agence.",
+                "image" : "https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png",
+                "email" : "contact@lachouetteagence.com",
+                "address" : {
+                    "@type" : "PostalAddress",
+                    "streetAddress" : "2 place Sathonay",
+                    "addressLocality" : "Lyon",
+                    "addressRegion" : "Rhône-Alpes",
+                    "addressCountry" : "France",
+                    "postalCode" : "69001"
+                },
+                "openingHoursSpecification" : {
+                    "@type" : "OpeningHoursSpecification",
+                    "dayOfWeek" : {
+                        "@type" : "DayOfWeek",
+                        "name" : "Lundi au Vendredi"
+                    },
+                    "opens" : "09:00",
+                    "closes" : "18:00"
+                },
+                "review" : {
+                    "@type" : "Review",
+                    "author" : {
+                        "@type" : "Person",
+                        "name" : "Maxime Guibard, PDG de À vos fourchettes"
+                    },
+                    "reviewBody" : "&quot;La chouette agence est une excellente agence ! Les<BR/>\n\t\t\t\t\t\tweb designers ont réussi à capturer l&#39;essence de notre<BR/>\n\t\t\t\t\t\tentreprise et à l&#39;intégrer à notre site. Cela nous a aidé à<BR/>\n\t\t\t\t\t\tdoubler nos ventes en ligne à Lyon.&quot;"
+                }
+            }
+        </script>
+        <!-- Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164136332-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-164136332-1');
+        </script>
+        <!-- Analytics END -->
     </body>
 </html>
